# airbnb_priceforecaster

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  make.bat
docs/features/: drop_features.rst  features.rst  keep_features.rst
notebooks/: EDA.ipynb  ETL EDA.ipynb  Feature EDA.ipynb  Test Models.ipynb
src/airbnb_priceforecaster/: __init__.py
src/airbnb_priceforecaster/data/: __init__.py  dataset.py  external_data.py  preprocess.py
src/airbnb_priceforecaster/features/: __init__.py  amenities.py  bed_type.py  beds.py  build_features.py  cleaning_fee.py  extra_people.py  guests_included.py  host_acceptance_rate.py  host_has_profile_pic.py  host_identity_verified.py  host_location.py  host_response_time.py  host_since.py  house_rules_len.py  neighbourhood.py  property_type.py  room_type.py  security_deposit.py  square_feet.py  zipcode.py
src/airbnb_priceforecaster/models/: __init__.py  model.py  train_model.py
