[tool.poetry]
name = "airbnb_priceforecaster"
version = "0.1.0"
description = "Predicting AirBnB prices"
authors = ["Anders Bogsnes <andersbogsnes@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.5"
pyarrow = "^0.17.1"
ml_tooling = "^0.10.3"
httpx = "^0.13.3"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
