[tool.poetry]
name = "airbnb_priceforecaster"
version = "0.1.0"
description = "Predicting AirBnB prices"
authors = ["Anders Bogsnes <andersbogsnes@gmail.com>"]
license = "MIT"
include = ["production_model.pkl"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.5"
pyarrow = "^0.17.1"
requests = "^2.24.0"
click = "^7.1.2"
ml-tooling = {git = "git@github.com:andersbogsnes/ml_tooling.git", rev = "develop"}

[tool.poetry.dev-dependencies]
jupyterlab = "^2.1.5"

[tool.poetry.scripts]
airbnb_priceforecaster = "airbnb_priceforecaster.manage:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
