[tool.poetry]
name = "airbnb_priceforecaster"
version = "0.1.0"
description = "Predicting AirBnB prices"
authors = ["Anders Bogsnes <andersbogsnes@gmail.com>"]
license = "MIT"
include = ["production_model.pkl"]

[tool.poetry.dependencies]
python = "3.10"
pandas = "^1.4.3"
pyarrow = "^9.0.0"
requests = "^2.28.1"
click = "^8.1.3"
ml_tooling = "^0.12.0"
scipy = "^1.9.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.5"

[tool.poetry.scripts]
airbnb_priceforecaster = "airbnb_priceforecaster.manage:cli"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"